--- a/week12.html
+++ b/week12.html
@@ -36,13 +36,13 @@
 <td>
 <table border=0 cellspacing=0 width=140>
 <tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>Matthew (2)</b></font></td></tr>
-<tr><td>Brady</td>         <td></td><td align=right>0</td></tr>
+<tr><td>Wentz</td>         <td></td><td align=right>0</td></tr>
+<tr><td>Barkley</td>       <td></td><td align=right>0</td></tr>
 <tr><td>Gurley</td>        <td></td><td align=right>0</td></tr>
-<tr><td>Michel</td>        <td></td><td align=right>0</td></tr>
 <tr><td>MThomas</td>       <td></td><td align=right>0</td></tr>
 <tr><td>Sutton</td>        <td></td><td align=right>0</td></tr>
 <tr><td>Fant</td>          <td></td><td align=right>0</td></tr>
-<tr><td>Butker</td>        <td></td><td align=right>0</td></tr>
+<tr><td>Slye</td>          <td></td><td align=right>0</td></tr>
 <tr><td>Haskins</td>       <td></td><td align=right>0</td></tr>
 <tr><td></td>              <td></td><td align=right>0</td></tr>
 </table>
@@ -51,11 +51,11 @@
 <table border=0 cellspacing=0 width=140>
 <tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>Mike (10)</b></font></td></tr>
 <tr><td>Watson</td>        <td></td><td align=right>0</td></tr>
-<tr><td>DJohnson</td>      <td></td><td align=right>0</td></tr>
-<tr><td>McCoy</td>         <td></td><td align=right>0</td></tr>
-<tr><td>JJones</td>        <td></td><td align=right>0</td></tr>
+<tr><td>Henry</td>         <td></td><td align=right>0</td></tr>
+<tr><td>Hunt</td>          <td></td><td align=right>0</td></tr>
 <tr><td>Cooper</td>        <td></td><td align=right>0</td></tr>
-<tr><td>Olsen</td>         <td></td><td align=right>0</td></tr>
+<tr><td>Dorsett</td>       <td></td><td align=right>0</td></tr>
+<tr><td>Knox</td>          <td></td><td align=right>0</td></tr>
 <tr><td>Maher</td>         <td></td><td align=right>0</td></tr>
 <tr><td>Sanders</td>       <td></td><td align=right>0</td></tr>
 <tr><td></td>              <td></td><td align=right>0</td></tr>
@@ -81,13 +81,13 @@
 <table border=0 cellspacing=0 width=140>
 <tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>Steven (6)</b></font></td></tr>
 <tr><td>Mayfield</td>      <td></td><td align=right>0</td></tr>
-<tr><td>RJones</td>        <td></td><td align=right>0</td></tr>
+<tr><td>Carson</td>        <td></td><td align=right>0</td></tr>
 <tr><td>Fournette</td>     <td></td><td align=right>0</td></tr>
 <tr><td>Hopkins</td>       <td></td><td align=right>0</td></tr>
-<tr><td>Hill</td>          <td></td><td align=right>0</td></tr>
-<tr><td>Howard</td>        <td></td><td align=right>0</td></tr>
-<tr><td>Gonzalez</td>      <td></td><td align=right>0</td></tr>
-<tr><td>DSamuel</td>       <td></td><td align=right>0</td></tr>
+<tr><td>ARobinson</td>     <td></td><td align=right>0</td></tr>
+<tr><td>Ebron</td>         <td></td><td align=right>0</td></tr>
+<tr><td>Gould</td>         <td></td><td align=right>0</td></tr>
+<tr><td>Metcalf</td>       <td></td><td align=right>0</td></tr>
 <tr><td></td>              <td></td><td align=right>0</td></tr>
 </table>
 </td>
@@ -127,12 +127,12 @@
 <tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>Grant (5)</b></font></td></tr>
 <tr><td>Ryan</td>          <td></td><td align=right>0</td></tr>
 <tr><td>Elliott</td>       <td></td><td align=right>0</td></tr>
-<tr><td>MGordon</td>       <td></td><td align=right>0</td></tr>
+<tr><td>Hyde</td>          <td></td><td align=right>0</td></tr>
+<tr><td>Chark</td>         <td></td><td align=right>0</td></tr>
 <tr><td>Edelman</td>       <td></td><td align=right>0</td></tr>
-<tr><td>Landry</td>        <td></td><td align=right>0</td></tr>
 <tr><td>Waller</td>        <td></td><td align=right>0</td></tr>
 <tr><td>Fairbairn</td>     <td></td><td align=right>0</td></tr>
-<tr><td>McLaurin</td>      <td></td><td align=right>0</td></tr>
+<tr><td>Montgomery</td>    <td></td><td align=right>0</td></tr>
 <tr><td></td>              <td></td><td align=right>0</td></tr>
 </table>
 </td>
