--- a/week12.html
+++ b/week12.html
@@ -7,14 +7,14 @@
 <td>
 <table border=0 cellspacing=0 width=140>
 <tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>Roger (1)</b></font></td></tr>
-<tr><td>Mahomes</td>       <td></td><td align=right>0</td></tr>
+<tr><td>Garoppolo</td>     <td></td><td align=right>0</td></tr>
 <tr><td>Kamara</td>        <td></td><td align=right>0</td></tr>
 <tr><td>Mack</td>          <td></td><td align=right>0</td></tr>
-<tr><td>DMoore</td>        <td></td><td align=right>0</td></tr>
-<tr><td>Sanu</td>          <td></td><td align=right>0</td></tr>
+<tr><td>Beckham</td>       <td></td><td align=right>0</td></tr>
+<tr><td>ESanders</td>      <td></td><td align=right>0</td></tr>
 <tr><td>Hockenson</td>     <td></td><td align=right>0</td></tr>
 <tr><td>Hauschka</td>      <td></td><td align=right>0</td></tr>
-<tr><td>Boykin</td>        <td></td><td align=right>0</td></tr>
+<tr><td>Meyers</td>        <td></td><td align=right>0</td></tr>
 <tr><td></td>              <td></td><td align=right>0</td></tr>
 </table>
 </td>
@@ -26,7 +26,7 @@
 <tr><td>Coleman</td>       <td></td><td align=right>0</td></tr>
 <tr><td>Godwin</td>        <td></td><td align=right>0</td></tr>
 <tr><td>JBrown</td>        <td></td><td align=right>0</td></tr>
-<tr><td>Rudolph</td>       <td></td><td align=right>0</td></tr>
+<tr><td>Cook</td>          <td></td><td align=right>0</td></tr>
 <tr><td>Zuerlein</td>      <td></td><td align=right>0</td></tr>
 <tr><td>Singletary</td>    <td></td><td align=right>0</td></tr>
 <tr><td></td>              <td></td><td align=right>0</td></tr>
@@ -54,7 +54,7 @@
 <tr><td>Henry</td>         <td></td><td align=right>0</td></tr>
 <tr><td>Hunt</td>          <td></td><td align=right>0</td></tr>
 <tr><td>Cooper</td>        <td></td><td align=right>0</td></tr>
-<tr><td>Dorsett</td>       <td></td><td align=right>0</td></tr>
+<tr><td>JJones</td>        <td></td><td align=right>0</td></tr>
 <tr><td>Knox</td>          <td></td><td align=right>0</td></tr>
 <tr><td>Maher</td>         <td></td><td align=right>0</td></tr>
 <tr><td>Sanders</td>       <td></td><td align=right>0</td></tr>
@@ -112,11 +112,11 @@
 <tr><td>Winston</td>       <td></td><td align=right>0</td></tr>
 <tr><td>Bell</td>          <td></td><td align=right>0</td></tr>
 <tr><td>Ingram</td>        <td></td><td align=right>0</td></tr>
-<tr><td>RAnderson</td>     <td></td><td align=right>0</td></tr>
-<tr><td>Kirk</td>          <td></td><td align=right>0</td></tr>
-<tr><td>Henry</td>         <td></td><td align=right>0</td></tr>
+<tr><td>Adams</td>         <td></td><td align=right>0</td></tr>
+<tr><td>Lockett</td>       <td></td><td align=right>0</td></tr>
+<tr><td>Griffin</td>       <td></td><td align=right>0</td></tr>
 <tr><td>Lambo</td>         <td></td><td align=right>0</td></tr>
-<tr><td>Seibert</td>       <td></td><td align=right>0</td></tr>
+<tr><td>DJones</td>        <td></td><td align=right>0</td></tr>
 <tr><td></td>              <td></td><td align=right>0</td></tr>
 </table>
 </td>
