--- a/week13.html
+++ b/week13.html
@@ -67,13 +67,13 @@
 <table border=0 cellspacing=0 width=140>
 <tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>States (3)</b></font></td></tr>
 <tr><td>LJackson</td>      <td></td><td align=right>0</td></tr>
-<tr><td>Guice</td>         <td></td><td align=right>0</td></tr>
-<tr><td>TJohnson</td>      <td></td><td align=right>0</td></tr>
-<tr><td>TWilliams</td>     <td></td><td align=right>0</td></tr>
+<tr><td>DWilliams</td>     <td></td><td align=right>0</td></tr>
+<tr><td>Ekeler</td>        <td></td><td align=right>0</td></tr>
+<tr><td>Diggs</td>         <td></td><td align=right>0</td></tr>
 <tr><td>Ridley</td>        <td></td><td align=right>0</td></tr>
 <tr><td>Ertz</td>          <td></td><td align=right>0</td></tr>
 <tr><td>Tucker</td>        <td></td><td align=right>0</td></tr>
-<tr><td>Finley</td>        <td></td><td align=right>0</td></tr>
+<tr><td>Murray</td>        <td></td><td align=right>0</td></tr>
 <tr><td></td>              <td></td><td align=right>0</td></tr>
 </table>
 </td>
