--- a/week13.html
+++ b/week13.html
@@ -71,7 +71,7 @@
 <tr><td>Ekeler</td>        <td></td><td align=right>0</td></tr>
 <tr><td>Diggs</td>         <td></td><td align=right>0</td></tr>
 <tr><td>Ridley</td>        <td></td><td align=right>0</td></tr>
-<tr><td>Ertz</td>          <td></td><td align=right>0</td></tr>
+<tr><td>Fells</td>         <td></td><td align=right>0</td></tr>
 <tr><td>Tucker</td>        <td></td><td align=right>0</td></tr>
 <tr><td>Murray</td>        <td></td><td align=right>0</td></tr>
 <tr><td></td>              <td></td><td align=right>0</td></tr>
@@ -113,7 +113,7 @@
 <tr><td>JWilliams</td>     <td></td><td align=right>0</td></tr>
 <tr><td>Jacobs</td>        <td></td><td align=right>0</td></tr>
 <tr><td>Evans</td>         <td></td><td align=right>0</td></tr>
-<tr><td>Thielen</td>       <td></td><td align=right>0</td></tr>
+<tr><td>Slayton</td>       <td></td><td align=right>0</td></tr>
 <tr><td>Kittle</td>        <td></td><td align=right>0</td></tr>
 <tr><td>Elliott</td>       <td></td><td align=right>0</td></tr>
 <tr><td>Hodges</td>        <td></td><td align=right>0</td></tr>
