--- a/index.html
+++ b/index.html
@@ -37,7 +37,8 @@
 <a href="week10.html"><b>10</b></a>
 <a href="week11.html"><b>11</b></a>
 <a href="week12.html"><b>12</b></a>
-<a href="week13.html"><b>13P</b></a><br>
+<a href="week13.html"><b>13</b></a>
+<a href="week14.html"><b>14P</b></a><br>
 <a href="roster.html"><b>Roster</b></a><br>
 <a href="pickups.html"><b>Pickups & Trades</b></a><br>
 <a href="leader.html"><b>Current Leaderboard</b></a><br>
@@ -72,41 +73,41 @@
     <td bgcolor=#B3B3B3><font size=3.5 color='purple'><b>Weeks Won</b></font></td></tr>
 <tr><td><font size=2>Rich(9)</font></td>
     <td><font size=2>7</font></td>
-    <td><font size=2>5</font></td>
-    <td><font size=2>7680</font></td>
-    <td><font size=2>7965</font></td>
+    <td><font size=2>6</font></td>
+    <td><font size=2>8210</font></td>
+    <td><font size=2>8535</font></td>
     <td><font size=2>900</font></td>
     <td><font size=2>310</font></td>
     <td><font size=2>1</font></td></tr>
 <tr><td><font size=2>John(7)</font></td>
     <td><font size=2>7</font></td>
-    <td><font size=2>5</font></td>
-    <td><font size=2>7660</font></td>
-    <td><font size=2>8040</font></td>
+    <td><font size=2>6</font></td>
+    <td><font size=2>8150</font></td>
+    <td><font size=2>8785</font></td>
     <td><font size=2>1065</font></td>
     <td><font size=2>260</font></td>
     <td><font size=2>1</font></td></tr>
 <tr><td><font size=2>States(3)</font></td>
     <td><font size=2>6</font></td>
-    <td><font size=2>6</font></td>
-    <td><font size=2>8450</font></td>
-    <td><font size=2>7630</font></td>
+    <td><font size=2>7</font></td>
+    <td><font size=2>9055</font></td>
+    <td><font size=2>8260</font></td>
     <td><font size=2>1105</font></td>
     <td><font size=2>300</font></td>
     <td><font size=2>3</font></td></tr>
 <tr><td><font size=2>Grant(5)</font></td>
-    <td><font size=2>3</font></td>
+    <td><font size=2>4</font></td>
     <td><font size=2>9</font></td>
-    <td><font size=2>7020</font></td>
-    <td><font size=2>7920</font></td>
+    <td><font size=2>7590</font></td>
+    <td><font size=2>8450</font></td>
     <td><font size=2>1705</font></td>
     <td><font size=2>210</font></td>
     <td><font size=2>1</font></td></tr>
 <tr><td><font size=2>Roger(1)</font></td>
-    <td><font size=2>3</font></td>
+    <td><font size=2>4</font></td>
     <td><font size=2>9</font></td>
-    <td><font size=2>6640</font></td>
-    <td><font size=2>8155</font></td>
+    <td><font size=2>7060</font></td>
+    <td><font size=2>8545</font></td>
     <td><font size=2>940</font></td>
     <td><font size=2>270</font></td>
     <td><font size=2>0</font></td></tr>
@@ -118,45 +119,45 @@
     <td><font size=2></font></td>
     <td><font size=2></font></td>
     <td><font size=2></font></td></tr>
-<tr><td><font size=2>Steven(6)</font></td>
-    <td><font size=2>8</font></td>
-    <td><font size=2>4</font></td>
-    <td><font size=2>6470</font></td>
-    <td><font size=2>6405</font></td>
-    <td><font size=2>870</font></td>
-    <td><font size=2>305</font></td>
-    <td><font size=2>1</font></td></tr>
 <tr><td><font size=2>Randy(4)</font></td>
-    <td><font size=2>7</font></td>
+    <td><font size=2>8</font></td>
     <td><font size=2>5</font></td>
-    <td><font size=2>9695</font></td>
-    <td><font size=2>7455</font></td>
+    <td><font size=2>10440</font></td>
+    <td><font size=2>7945</font></td>
     <td><font size=2>1195</font></td>
     <td><font size=2>365</font></td>
-    <td><font size=2>3</font></td></tr>
+    <td><font size=2>4</font></td></tr>
 <tr><td><font size=2>Matthew(2)</font></td>
-    <td><font size=2>7</font></td>
+    <td><font size=2>8</font></td>
     <td><font size=2>5</font></td>
-    <td><font size=2>7275</font></td>
-    <td><font size=2>7250</font></td>
+    <td><font size=2>7885</font></td>
+    <td><font size=2>7685</font></td>
     <td><font size=2>855</font></td>
     <td><font size=2>295</font></td>
     <td><font size=2>0</font></td></tr>
-<tr><td><font size=2>Sam(8)</font></td>
-    <td><font size=2>6</font></td>
-    <td><font size=2>6</font></td>
-    <td><font size=2>7700</font></td>
-    <td><font size=2>7675</font></td>
-    <td><font size=2>1305</font></td>
-    <td><font size=2>405</font></td>
+<tr><td><font size=2>Steven(6)</font></td>
+    <td><font size=2>8</font></td>
+    <td><font size=2>5</font></td>
+    <td><font size=2>6905</font></td>
+    <td><font size=2>7015</font></td>
+    <td><font size=2>870</font></td>
+    <td><font size=2>305</font></td>
     <td><font size=2>1</font></td></tr>
 <tr><td><font size=2>Mike(10)</font></td>
+    <td><font size=2>7</font></td>
     <td><font size=2>6</font></td>
-    <td><font size=2>6</font></td>
-    <td><font size=2>7395</font></td>
-    <td><font size=2>7490</font></td>
+    <td><font size=2>8025</font></td>
+    <td><font size=2>8095</font></td>
     <td><font size=2>990</font></td>
     <td><font size=2>245</font></td>
+    <td><font size=2>1</font></td></tr>
+<tr><td><font size=2>Sam(8)</font></td>
+    <td><font size=2>6</font></td>
+    <td><font size=2>7</font></td>
+    <td><font size=2>8090</font></td>
+    <td><font size=2>8095</font></td>
+    <td><font size=2>1305</font></td>
+    <td><font size=2>390</font></td>
     <td><font size=2>1</font></td></tr>
 </table>
 </table>
