--- a/index.html
+++ b/index.html
@@ -29,7 +29,8 @@
 <a href="week2.html"><b>2</b></a>
 <a href="week3.html"><b>3</b></a>
 <a href="week4.html"><b>4</b></a>
-<a href="week5.html"><b>5P</b></a><br>
+<a href="week5.html"><b>5</b></a>
+<a href="week6.html"><b>6P</b></a><br>
 <a href="roster.html"><b>Roster</b></a><br>
 <a href="pickups.html"><b>Pickups & Trades</b></a><br>
 <a href="leader.html"><b>Current Leaderboard</b></a><br>
@@ -63,42 +64,42 @@
     <td bgcolor=#B3B3B3><font size=3.5 color='purple'><b>Low</b></font></td>
     <td bgcolor=#B3B3B3><font size=3.5 color='purple'><b>Weeks Won</b></font></td></tr>
 <tr><td><font size=2>States(3)</font></td>
-    <td><font size=2>3</font></td>
+    <td><font size=2>4</font></td>
     <td><font size=2>1</font></td>
-    <td><font size=2>3425</font></td>
-    <td><font size=2>2695</font></td>
+    <td><font size=2>4315</font></td>
+    <td><font size=2>3500</font></td>
     <td><font size=2>1010</font></td>
     <td><font size=2>630</font></td>
     <td><font size=2>0</font></td></tr>
 <tr><td><font size=2>Sam(7)</font></td>
+    <td><font size=2>3</font></td>
     <td><font size=2>2</font></td>
-    <td><font size=2>2</font></td>
-    <td><font size=2>3105</font></td>
-    <td><font size=2>2400</font></td>
+    <td><font size=2>3865</font></td>
+    <td><font size=2>2930</font></td>
     <td><font size=2>970</font></td>
     <td><font size=2>625</font></td>
     <td><font size=2>0</font></td></tr>
 <tr><td><font size=2>Rich(1)</font></td>
+    <td><font size=2>3</font></td>
     <td><font size=2>2</font></td>
-    <td><font size=2>2</font></td>
-    <td><font size=2>2915</font></td>
-    <td><font size=2>3160</font></td>
+    <td><font size=2>3645</font></td>
+    <td><font size=2>3440</font></td>
     <td><font size=2>1030</font></td>
     <td><font size=2>540</font></td>
     <td><font size=2>1</font></td></tr>
 <tr><td><font size=2>Grant(9)</font></td>
     <td><font size=2>2</font></td>
-    <td><font size=2>2</font></td>
-    <td><font size=2>2880</font></td>
-    <td><font size=2>2510</font></td>
+    <td><font size=2>3</font></td>
+    <td><font size=2>3495</font></td>
+    <td><font size=2>3235</font></td>
     <td><font size=2>1005</font></td>
     <td><font size=2>415</font></td>
     <td><font size=2>0</font></td></tr>
 <tr><td><font size=2>Roger(5)</font></td>
     <td><font size=2>2</font></td>
-    <td><font size=2>2</font></td>
-    <td><font size=2>2640</font></td>
-    <td><font size=2>3185</font></td>
+    <td><font size=2>3</font></td>
+    <td><font size=2>3445</font></td>
+    <td><font size=2>4075</font></td>
     <td><font size=2>845</font></td>
     <td><font size=2>335</font></td>
     <td><font size=2>0</font></td></tr>
@@ -111,44 +112,44 @@
     <td><font size=2></font></td>
     <td><font size=2></font></td></tr>
 <tr><td><font size=2>Steven(2)</font></td>
-    <td><font size=2>4</font></td>
+    <td><font size=2>5</font></td>
     <td><font size=2>0</font></td>
-    <td><font size=2>3655</font></td>
-    <td><font size=2>2435</font></td>
+    <td><font size=2>4380</font></td>
+    <td><font size=2>3050</font></td>
     <td><font size=2>1125</font></td>
-    <td><font size=2>750</font></td>
+    <td><font size=2>725</font></td>
     <td><font size=2>2</font></td></tr>
 <tr><td><font size=2>Matthew(10)</font></td>
     <td><font size=2>2</font></td>
-    <td><font size=2>2</font></td>
-    <td><font size=2>2945</font></td>
-    <td><font size=2>3110</font></td>
+    <td><font size=2>3</font></td>
+    <td><font size=2>3475</font></td>
+    <td><font size=2>3870</font></td>
     <td><font size=2>940</font></td>
-    <td><font size=2>540</font></td>
+    <td><font size=2>530</font></td>
+    <td><font size=2>1</font></td></tr>
+<tr><td><font size=2>Randy(8)</font></td>
+    <td><font size=2>2</font></td>
+    <td><font size=2>3</font></td>
+    <td><font size=2>3385</font></td>
+    <td><font size=2>3685</font></td>
+    <td><font size=2>1000</font></td>
+    <td><font size=2>420</font></td>
     <td><font size=2>1</font></td></tr>
 <tr><td><font size=2>John(6)</font></td>
     <td><font size=2>1</font></td>
-    <td><font size=2>3</font></td>
-    <td><font size=2>2560</font></td>
-    <td><font size=2>2875</font></td>
+    <td><font size=2>4</font></td>
+    <td><font size=2>3010</font></td>
+    <td><font size=2>3875</font></td>
     <td><font size=2>830</font></td>
     <td><font size=2>430</font></td>
     <td><font size=2>0</font></td></tr>
 <tr><td><font size=2>Mike(4)</font></td>
     <td><font size=2>1</font></td>
-    <td><font size=2>3</font></td>
-    <td><font size=2>2410</font></td>
-    <td><font size=2>3315</font></td>
+    <td><font size=2>4</font></td>
+    <td><font size=2>2690</font></td>
+    <td><font size=2>4045</font></td>
     <td><font size=2>785</font></td>
     <td><font size=2>280</font></td>
-    <td><font size=2>0</font></td></tr>
-<tr><td><font size=2>Randy(8)</font></td>
-    <td><font size=2>1</font></td>
-    <td><font size=2>3</font></td>
-    <td><font size=2>2385</font></td>
-    <td><font size=2>3235</font></td>
-    <td><font size=2>735</font></td>
-    <td><font size=2>420</font></td>
     <td><font size=2>0</font></td></tr>
 </table>
 </table>
