--- a/thousand.html
+++ b/thousand.html
@@ -1041,4 +1041,10 @@
     <td>1000</td>
     <td>Randy</td>
     <td>520</td></tr>
+<tr><td>2020</td>
+    <td>Week 5</td>
+    <td>Randy Edwards</td>
+    <td>1000</td>
+    <td>John</td>
+    <td>450</td></tr>
 </table>
